--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@ Created by [40423224](https://40423224.github.io/2017springcd_hw/blog/)
 
 
 						
+<section data-markdown>
+    <script type="text/template">
+#week7
+
+* 往fossil傳遞檔案，以及onshape參數繪圖 
+
+    </script>
+</section>
+
+
+						
 </div>
 
 </div>
