--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@ Created by [40423224](https://40423224.github.io/2017springcd_hw/blog/)
 						
 <section data-markdown>
     <script type="text/template">
+#week13
+
+* 行走机构
+    </script>
+</section>
+
+
+						
+<section data-markdown>
+    <script type="text/template">
 #week15
 
 * 組員協同練習.
